--- a/foodie-delight/src/styles/HomeStyle.css
+++ b/foodie-delight/src/styles/HomeStyle.css
@@ -50,6 +50,11 @@
     cursor: pointer;
     transition: 0.3s ease-in;
   }
+
+  .headerContainer .button-link {
+    display: block;
+    margin-bottom: 10px; /* Optional: add space between buttons */
+  }
   
   /* mobile view  */
   
